--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="bg-[#008374]"> 
   <header id="header" class="text-[white]">
 
-    <div class="flex bg-[#008374] fixed z-50 top-[0px]">
+    <div class="flex bg-[#008374] fixed z-50">
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
@@ -70,7 +70,7 @@
           <li><a href="#portfolio" class="hover:underline hover:underline-offset-8 hover:decoration-[orange]">Portfolio</a></li>
           <li><a href="#team" class="hover:underline hover:underline-offset-8 hover:decoration-[orange]">Team</a></li>
           <li><a href="blog.html" class="hover:underline hover:underline-offset-8 hover:decoration-[orange]">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>DropDown</span> <i class="bi bi-chevron-down dropdown-indicator hover:decoration-[orange]"></i></a>
+          <li class="dropdown "><a href="#"><span>DropDown</span> <i class="bi bi-chevron-down dropdown-indicator hover:decoration-[orange]"></i></a>
           <li class="pr-[300px]"><a href="#contact" class="hover:underline hover:underline-offset-8 hover:decoration-[orange]">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
